--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -16,7 +16,7 @@ $(function () {
         data: {
             name: '{{ name }}',
             summary: '{{ summary }}',
-            content: '{{ content.replace('\n','$#') }}'
+            content: '{{ content.replace('\n','$#') if content else '' }}'
         },
         created:function(){ //数据渲染后的操作
             if(this.content) {
