--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -2,7 +2,7 @@
 <html class="uk-height-1-1">
 <head>
     <meta charset="utf-8" />
-    <title>登录 - Awesome Python Webapp</title>
+    <title>登录</title>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -51,7 +51,7 @@ $(function() {
 <body class="uk-height-1-1">
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
         <div class="uk-vertical-align-middle" style="width: 320px">
-            <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">Awesome Python Webapp</a></p>
+            <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">从于内心 始于认真</a></p>
 
             <form id="form-signin" v-on="submit: submit" class="uk-panel uk-panel-box uk-form">
                 <div class="uk-alert uk-alert-danger uk-hidden"></div>
